--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aiosignal==1.4.0
@@ -7,15 +6,32 @@ anthropic==0.54.0
 anyio==4.9.0
 asttokens==3.0.0
 attrs==25.3.0
+Authlib==1.6.1
+Automat==25.4.16
 beautifulsoup4==4.13.4
 cachetools==5.5.2
 certifi==2025.6.15
+cffi==1.17.1
 charset-normalizer==3.4.2
-click==8.2.1
+click==8.1.8
+constantly==23.10.4
+cryptography==45.0.5
+cssselect==1.3.0
+cyclopts==3.22.5
 decorator==5.2.1
+defusedxml==0.7.1
+deprecation==2.1.0
 distro==1.9.0
+dkpro-cassis==0.9.1
+dnspython==2.7.0
+docstring_parser==0.17.0
+docutils==0.22
 docx==0.2.4
+email_validator==2.2.0
+exceptiongroup==1.3.0
 executing==2.2.0
+fastmcp==2.11.0
+filelock==3.19.1
 frozenlist==1.7.0
 google==3.0.0
 google-ai-generativelanguage==0.6.15
@@ -33,14 +49,23 @@ httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
 httpx-sse==0.4.1
+hyperlink==21.0.0
 idna==3.10
+importlib-resources==5.4.0
+incremental==24.7.2
 ipython==9.4.0
 ipython_pygments_lexers==1.1.1
+isodate==0.7.2
+itemadapter==0.12.2
+itemloaders==1.3.2
 jedi==0.19.2
 jiter==0.10.0
+jmespath==1.0.1
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.0
+jsonschema-path==0.3.4
 jsonschema-specifications==2025.4.1
 langchain==0.3.26
 langchain-core==0.3.68
@@ -52,47 +77,75 @@ langgraph-checkpoint==2.1.0
 langgraph-prebuilt==0.5.2
 langgraph-sdk==0.1.72
 langsmith==0.4.4
+lazy-object-proxy==1.11.0
 lxml==5.4.0
 Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mcp==1.12.3
-mcp-server==0.1.4
+mdurl==0.1.2
+more-itertools==8.14.0
 multidict==6.6.3
+nltk==3.9.1
 openai==1.90.0
+openapi-core==0.19.5
+openapi-pydantic==0.5.1
+openapi-schema-validator==0.6.3
+openapi-spec-validator==0.7.2
 orjson==3.10.18
 ormsgpack==1.10.0
 outcome==1.3.0.post0
 packaging==24.2
+parse==1.20.2
+parsel==1.10.0
 parso==0.8.4
+pathable==0.4.4
 pdfkit==1.0.0
 pexpect==4.9.0
 pillow==11.2.1
 playwright==1.52.0
 prompt_toolkit==3.0.51
 propcache==0.3.2
+Protego==0.5.0
 proto-plus==1.26.1
 protobuf==5.29.5
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.11.7
-pydantic-settings==2.10.1
+pydantic-settings==2.7.1
 pydantic_core==2.33.2
+PyDispatcher==2.0.7
 pyee==13.0.0
 Pygments==2.19.2
+pyOpenSSL==25.1.0
 pyparsing==3.2.3
+pyperclip==1.9.0
 PySocks==1.7.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
+queuelib==1.8.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.4
+requests-file==2.1.0
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rich==14.1.0
+rich-rst==1.3.1
 rpds-py==0.26.0
 rsa==4.9.1
+Scrapy==2.13.3
+scrapy-user-agents==0.1.1
 selenium==4.33.0
+service-identity==24.2.0
+setuptools==80.9.0
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
@@ -102,19 +155,28 @@ stack-data==0.6.3
 starlette==0.47.2
 tenacity==9.1.2
 tiktoken==0.9.0
+tldextract==5.3.0
+toposort==1.7
 tqdm==4.67.1
 traitlets==5.14.3
 trio==0.30.0
 trio-websocket==0.12.2
+Twisted==25.5.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
 uritemplate==4.2.0
 urllib3==2.4.0
-uvicorn==0.35.0
+user-agents==2.2.0
+uvicorn==0.34.0
+w3lib==2.3.1
 wcwidth==0.2.13
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+Werkzeug==3.1.1
 wsproto==1.2.0
 xxhash==3.5.0
 yarl==1.20.1
+zope.interface==7.2
 zstandard==0.23.0
