--- a/requirements.txt
+++ b/requirements.txt
@@ -1,182 +1,102 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.4.0
+accelerate==1.10.1
 annotated-types==0.7.0
-anthropic==0.54.0
-anyio==4.9.0
-asttokens==3.0.0
-attrs==25.3.0
-Authlib==1.6.1
-Automat==25.4.16
-beautifulsoup4==4.13.4
-cachetools==5.5.2
-certifi==2025.6.15
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-constantly==23.10.4
-cryptography==45.0.5
-cssselect==1.3.0
-cyclopts==3.22.5
-decorator==5.2.1
-defusedxml==0.7.1
-deprecation==2.1.0
-distro==1.9.0
-dkpro-cassis==0.9.1
-dnspython==2.7.0
+anyio==4.11.0
+async-timeout==4.0.3
+attrs==25.4.0
+Authlib==1.6.5
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
+cryptography==46.0.2
+cyclopts==3.24.0
+dnspython==2.8.0
 docstring_parser==0.17.0
-docutils==0.22
-docx==0.2.4
-email_validator==2.2.0
+docutils==0.22.2
+dotenv==0.9.9
+einops==0.8.1
+email-validator==2.3.0
 exceptiongroup==1.3.0
-executing==2.2.0
-fastmcp==2.11.0
-filelock==3.19.1
-frozenlist==1.7.0
-google==3.0.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
-google-api-python-client==2.173.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.73.0
-grpcio-status==1.71.0
+fastmcp==2.12.4
+filelock==3.20.0
+fsspec==2025.9.0
+greenlet==3.2.4
 h11==0.16.0
+hf-xet==1.1.10
 httpcore==1.0.9
-httplib2==0.22.0
 httpx==0.28.1
-httpx-sse==0.4.1
-hyperlink==21.0.0
+httpx-sse==0.4.2
+huggingface-hub==0.35.3
 idna==3.10
-importlib-resources==5.4.0
-incremental==24.7.2
-ipython==9.4.0
-ipython_pygments_lexers==1.1.1
 isodate==0.7.2
-itemadapter==0.12.2
-itemloaders==1.3.2
-jedi==0.19.2
-jiter==0.10.0
-jmespath==1.0.1
-joblib==1.4.2
+Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.25.0
+jsonschema==4.25.1
 jsonschema-path==0.3.4
-jsonschema-specifications==2025.4.1
-langchain==0.3.26
-langchain-core==0.3.68
-langchain-openai==0.3.27
-langchain-tavily==0.2.6
-langchain-text-splitters==0.3.8
-langgraph==0.5.1
-langgraph-checkpoint==2.1.0
-langgraph-prebuilt==0.5.2
-langgraph-sdk==0.1.72
-langsmith==0.4.4
-lazy-object-proxy==1.11.0
-lxml==5.4.0
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mcp==1.12.3
+jsonschema-specifications==2025.9.1
+langchain==0.3.27
+langchain-core==0.3.78
+langchain-text-splitters==0.3.11
+langgraph==0.6.8
+langgraph-checkpoint==2.1.2
+langgraph-prebuilt==0.6.4
+langgraph-sdk==0.2.9
+langsmith==0.4.33
+lazy-object-proxy==1.12.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mcp==1.16.0
 mdurl==0.1.2
-more-itertools==8.14.0
-multidict==6.6.3
-nltk==3.9.1
-openai==1.90.0
+more-itertools==10.8.0
+mpmath==1.3.0
+networkx==3.4.2
+ninja==1.13.0
+numpy==2.2.6
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
 openapi-spec-validator==0.7.2
-orjson==3.10.18
-ormsgpack==1.10.0
-outcome==1.3.0.post0
-packaging==24.2
+orjson==3.11.3
+ormsgpack==1.11.0
+packaging==25.0
 parse==1.20.2
-parsel==1.10.0
-parso==0.8.4
 pathable==0.4.4
-pdfkit==1.0.0
-pexpect==4.9.0
-pillow==11.2.1
-playwright==1.52.0
-prompt_toolkit==3.0.51
-propcache==0.3.2
-Protego==0.5.0
-proto-plus==1.26.1
-protobuf==5.29.5
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.7.1
-pydantic_core==2.33.2
-PyDispatcher==2.0.7
-pyee==13.0.0
+psutil==7.1.0
+pycparser==2.23
+pydantic==2.12.0
+pydantic-settings==2.11.0
+pydantic_core==2.41.1
 Pygments==2.19.2
-pyOpenSSL==25.1.0
-pyparsing==3.2.3
-pyperclip==1.9.0
-PySocks==1.7.1
-python-dotenv==1.1.0
+pyperclip==1.11.0
+python-dotenv==1.1.1
 python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-queuelib==1.8.0
+PyYAML==6.0.3
 referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-requests-file==2.1.0
+regex==2025.9.18
+requests==2.32.5
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rich==14.1.0
 rich-rst==1.3.1
-rpds-py==0.26.0
-rsa==4.9.1
-Scrapy==2.13.3
-scrapy-user-agents==0.1.1
-selenium==4.33.0
-service-identity==24.2.0
-setuptools==80.9.0
+rpds-py==0.27.1
+safetensors==0.6.2
 six==1.17.0
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-SQLAlchemy==2.0.41
+SQLAlchemy==2.0.43
 sse-starlette==3.0.2
-stack-data==0.6.3
-starlette==0.47.2
+starlette==0.48.0
+sympy==1.14.0
 tenacity==9.1.2
-tiktoken==0.9.0
-tldextract==5.3.0
-toposort==1.7
+tokenizers==0.22.1
+torch==2.7.1+cu128
 tqdm==4.67.1
-traitlets==5.14.3
-trio==0.30.0
-trio-websocket==0.12.2
-Twisted==25.5.0
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-ua-parser==1.0.1
-ua-parser-builtins==0.18.0.post1
-uritemplate==4.2.0
-urllib3==2.4.0
-user-agents==2.2.0
-uvicorn==0.34.0
-w3lib==2.3.1
-wcwidth==0.2.13
-webdriver-manager==4.0.2
-websocket-client==1.8.0
+transformers==4.57.0
+triton==3.3.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.37.0
 Werkzeug==3.1.1
-wsproto==1.2.0
-xxhash==3.5.0
-yarl==1.20.1
-zope.interface==7.2
-zstandard==0.23.0
+xxhash==3.6.0
+zstandard==0.25.0
