--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 accelerate==1.10.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.0
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
 async-timeout==4.0.3
@@ -10,6 +13,7 @@ charset-normalizer==3.4.3
 click==8.3.0
 cryptography==46.0.2
 cyclopts==3.24.0
+distro==1.9.0
 dnspython==2.8.0
 docstring_parser==0.17.0
 docutils==0.22.2
@@ -19,6 +23,7 @@ email-validator==2.3.0
 exceptiongroup==1.3.0
 fastmcp==2.12.4
 filelock==3.20.0
+frozenlist==1.8.0
 fsspec==2025.9.0
 greenlet==3.2.4
 h11==0.16.0
@@ -30,6 +35,7 @@ huggingface-hub==0.35.3
 idna==3.10
 isodate==0.7.2
 Jinja2==3.1.6
+jiter==0.11.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
@@ -37,6 +43,8 @@ jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
 langchain==0.3.27
 langchain-core==0.3.78
+langchain-openai==0.3.35
+langchain-tavily==0.2.12
 langchain-text-splitters==0.3.11
 langgraph==0.6.8
 langgraph-checkpoint==2.1.2
@@ -50,9 +58,11 @@ mcp==1.16.0
 mdurl==0.1.2
 more-itertools==10.8.0
 mpmath==1.3.0
+multidict==6.7.0
 networkx==3.4.2
 ninja==1.13.0
 numpy==2.2.6
+openai==2.2.0
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
@@ -62,6 +72,7 @@ ormsgpack==1.11.0
 packaging==25.0
 parse==1.20.2
 pathable==0.4.4
+propcache==0.4.1
 psutil==7.1.0
 pycparser==2.23
 pydantic==2.12.0
@@ -71,6 +82,7 @@ Pygments==2.19.2
 pyperclip==1.11.0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.3
 referencing==0.36.2
 regex==2025.9.18
@@ -88,6 +100,7 @@ sse-starlette==3.0.2
 starlette==0.48.0
 sympy==1.14.0
 tenacity==9.1.2
+tiktoken==0.12.0
 tokenizers==0.22.1
 torch==2.7.1+cu128
 tqdm==4.67.1
@@ -99,4 +112,5 @@ urllib3==2.5.0
 uvicorn==0.37.0
 Werkzeug==3.1.1
 xxhash==3.6.0
+yarl==1.22.0
 zstandard==0.25.0
