--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,342 @@
-accelerate==1.10.1
+accelerate==1.11.0
+aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.13.0
+aiohttp==3.12.13
 aiosignal==1.4.0
+altair==5.5.0
+altgraph==0.17.4
+annotated-doc==0.0.3
 annotated-types==0.7.0
-anyio==4.11.0
-async-timeout==4.0.3
-attrs==25.4.0
-Authlib==1.6.5
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.3.0
-cryptography==46.0.2
-cyclopts==3.24.0
+anthropic==0.54.0
+anyio==4.7.0
+appscript==1.4.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asttokens==3.0.0
+asyncer==0.0.10
+attrs==25.3.0
+Authlib==1.6.1
+Automat==25.4.16
+babel==2.16.0
+backoff==2.2.1
+beautifulsoup4==4.13.4
+bidict==0.23.1
+bleach==6.2.0
+blinker==1.9.0
+Brotli==1.1.0
+cached-property==2.0.1
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+chevron==0.14.0
+click==8.1.8
+colorama==0.4.6
+constantly==23.10.4
+contourpy==1.3.3
+cryptography==44.0.2
+cssselect==1.3.0
+cuid==0.4
+cycler==0.12.1
+cyclopts==3.22.5
+dataclasses-json==0.6.7
+dateparser==1.2.2
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.3.1
+deprecation==2.1.0
 distro==1.9.0
-dnspython==2.8.0
+dkpro-cassis==0.9.1
+dnspython==2.7.0
 docstring_parser==0.17.0
-docutils==0.22.2
-dotenv==0.9.9
-einops==0.8.1
-email-validator==2.3.0
+docutils==0.22
+docx==0.2.4
+docx2pdf==0.1.8
+docxcompose==1.4.0
+docxtpl==0.19.1
+ecdsa==0.19.0
+email_validator==2.2.0
+et_xmlfile==2.0.0
 exceptiongroup==1.3.0
-fastmcp==2.12.4
-filelock==3.20.0
-frozenlist==1.8.0
+exchangelib==5.5.1
+executing==2.2.0
+fastapi==0.115.6
+fastmcp==2.11.0
+ffmpy==0.6.4
+filelock==3.19.1
+filetype==1.2.0
+fonttools==4.61.0
+fpdf==1.7.2
+frozenlist==1.7.0
 fsspec==2025.9.0
-greenlet==3.2.4
-h11==0.16.0
-hf-xet==1.1.10
+gitdb==4.0.12
+GitPython==3.1.45
+google==3.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.173.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+gradio_client==1.13.3
+greenlet==3.2.3
+groovy==0.1.2
+grpcio==1.73.0
+grpcio-status==1.71.0
+h11==0.14.0
+hf-xet==1.2.0
 httpcore==1.0.9
+httplib2==0.22.0
 httpx==0.28.1
-httpx-sse==0.4.2
-huggingface-hub==0.35.3
+httpx-sse==0.4.1
+huggingface-hub==0.36.0
+hyperlink==21.0.0
 idna==3.10
+importlib-resources==5.4.0
+importlib_metadata==8.7.0
+incremental==24.7.2
+inflection==0.5.1
+invoice2data==0.4.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
 isodate==0.7.2
-Jinja2==3.1.6
-jiter==0.11.0
+itemadapter==0.12.2
+itemloaders==1.3.2
+jedi==0.19.2
+Jinja2==3.1.5
+jiter==0.10.0
+jmespath==1.0.1
+joblib==1.4.2
+jose==1.0.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.25.1
+jsonschema==4.25.0
 jsonschema-path==0.3.4
-jsonschema-specifications==2025.9.1
-langchain==0.3.27
-langchain-core==0.3.78
-langchain-openai==0.3.35
-langchain-tavily==0.2.12
-langchain-text-splitters==0.3.11
-langgraph==0.6.8
-langgraph-checkpoint==2.1.2
-langgraph-prebuilt==0.6.4
-langgraph-sdk==0.2.9
-langsmith==0.4.33
-lazy-object-proxy==1.12.0
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mcp==1.16.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.9
+langchain==0.3.26
+langchain-core==0.3.68
+langchain-openai==0.3.27
+langchain-tavily==0.2.6
+langchain-text-splitters==0.3.8
+langgraph==0.5.1
+langgraph-checkpoint==2.1.0
+langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.72
+langsmith==0.4.4
+Lazify==0.4.0
+lazy-object-proxy==1.11.0
+literalai==0.1.201
+lxml==5.3.0
+macholib==1.16.3
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.7
+matplotlib-inline==0.1.7
+mcp==1.12.3
 mdurl==0.1.2
-more-itertools==10.8.0
+monotonic==1.6
+more-itertools==8.14.0
 mpmath==1.3.0
-multidict==6.7.0
-networkx==3.4.2
-ninja==1.13.0
-numpy==2.2.6
-openai==2.2.0
+multidict==6.6.3
+mypy_extensions==1.1.0
+narwhals==2.10.0
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.1
+numpy==2.2.1
+oauthlib==3.2.2
+openai==1.90.0
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
 openapi-schema-validator==0.6.3
 openapi-spec-validator==0.7.2
-orjson==3.11.3
-ormsgpack==1.11.0
-packaging==25.0
+openpyxl==3.1.5
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-exporter-otlp-proto-http==1.38.0
+opentelemetry-instrumentation==0.59b0
+opentelemetry-instrumentation-alephalpha==0.47.5
+opentelemetry-instrumentation-anthropic==0.47.5
+opentelemetry-instrumentation-bedrock==0.47.5
+opentelemetry-instrumentation-chromadb==0.47.5
+opentelemetry-instrumentation-cohere==0.47.5
+opentelemetry-instrumentation-crewai==0.47.5
+opentelemetry-instrumentation-google-generativeai==0.47.5
+opentelemetry-instrumentation-groq==0.47.5
+opentelemetry-instrumentation-haystack==0.47.5
+opentelemetry-instrumentation-lancedb==0.47.5
+opentelemetry-instrumentation-langchain==0.47.5
+opentelemetry-instrumentation-llamaindex==0.47.5
+opentelemetry-instrumentation-logging==0.59b0
+opentelemetry-instrumentation-marqo==0.47.5
+opentelemetry-instrumentation-mcp==0.47.5
+opentelemetry-instrumentation-milvus==0.47.5
+opentelemetry-instrumentation-mistralai==0.47.5
+opentelemetry-instrumentation-ollama==0.47.5
+opentelemetry-instrumentation-openai==0.47.5
+opentelemetry-instrumentation-openai-agents==0.47.5
+opentelemetry-instrumentation-pinecone==0.47.5
+opentelemetry-instrumentation-qdrant==0.47.5
+opentelemetry-instrumentation-redis==0.59b0
+opentelemetry-instrumentation-replicate==0.47.5
+opentelemetry-instrumentation-requests==0.59b0
+opentelemetry-instrumentation-sagemaker==0.47.5
+opentelemetry-instrumentation-sqlalchemy==0.59b0
+opentelemetry-instrumentation-threading==0.59b0
+opentelemetry-instrumentation-together==0.47.5
+opentelemetry-instrumentation-transformers==0.47.5
+opentelemetry-instrumentation-urllib3==0.59b0
+opentelemetry-instrumentation-vertexai==0.47.5
+opentelemetry-instrumentation-watsonx==0.47.5
+opentelemetry-instrumentation-weaviate==0.47.5
+opentelemetry-instrumentation-writer==0.47.5
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+opentelemetry-semantic-conventions-ai==0.4.13
+opentelemetry-util-http==0.59b0
+orjson==3.10.18
+ormsgpack==1.10.0
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
 parse==1.20.2
+parsel==1.10.0
+parso==0.8.4
+passlib==1.7.4
 pathable==0.4.4
-propcache==0.4.1
-psutil==7.1.0
-pycparser==2.23
-pydantic==2.12.0
+pdfkit==1.0.0
+pefile==2023.2.7
+pexpect==4.9.0
+pillow==11.2.1
+playwright==1.52.0
+posthog==3.25.0
+prompt_toolkit==3.0.51
+propcache==0.3.2
+Protego==0.5.0
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.10.4
 pydantic-settings==2.11.0
-pydantic_core==2.41.1
-Pygments==2.19.2
-pyperclip==1.11.0
-python-dotenv==1.1.1
+pydantic_core==2.27.2
+pydeck==0.9.1
+PyDispatcher==2.0.7
+pydub==0.25.1
+pyee==13.0.0
+Pygments==2.19.1
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2025.0
+PyJWT==2.10.1
+pymssql==2.3.2
+pyodbc==5.2.0
+pyOpenSSL==25.1.0
+pyparsing==3.2.3
+pyperclip==1.9.0
+PySocks==1.7.1
+pyspnego==0.11.2
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.0.1
+python-engineio==4.12.3
+python-jose==3.3.0
 python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.3
+python-socketio==5.14.3
+pytz==2024.2
+PyYAML==6.0.2
+queuelib==1.8.0
 referencing==0.36.2
-regex==2025.9.18
-requests==2.32.5
+regex==2024.11.6
+requests==2.32.3
+requests-file==2.1.0
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+requests_ntlm==1.3.0
 rfc3339-validator==0.1.4
 rich==14.1.0
 rich-rst==1.3.1
-rpds-py==0.27.1
+rpds-py==0.26.0
+rsa==4.9
+ruff==0.14.2
+safehttpx==0.1.7
 safetensors==0.6.2
+schedule==1.2.2
+Scrapy==2.13.3
+scrapy-user-agents==0.1.1
+selenium==4.33.0
+semantic-version==2.10.0
+service-identity==24.2.0
+setuptools==75.8.0
+shellingham==1.5.4
+simple-websocket==1.1.0
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.43
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==2.0.41
 sse-starlette==3.0.2
-starlette==0.48.0
+sspilib==0.3.1
+stack-data==0.6.3
+starlette==0.41.3
+streamlit==1.51.0
 sympy==1.14.0
+syncer==2.0.3
+tavily==1.0.0
+tavily-python==0.7.12
 tenacity==9.1.2
-tiktoken==0.12.0
+tiktoken==0.9.0
+tldextract==5.3.0
 tokenizers==0.22.1
+toml==0.10.2
+tomli==2.3.0
+tomlkit==0.13.3
+toposort==1.7
+torch==2.9.0
+tornado==6.5.2
 tqdm==4.67.1
-transformers==4.57.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-urllib3==2.5.0
-uvicorn==0.37.0
+traceloop-sdk==0.47.5
+traitlets==5.14.3
+transformers==4.57.1
+trio==0.30.0
+trio-websocket==0.12.2
+Twisted==25.5.0
+typer==0.20.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.3.1
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
+uritemplate==4.2.0
+urllib3==2.4.0
+user-agents==2.2.0
+uvicorn==0.34.0
+w3lib==2.3.1
+watchfiles==0.24.0
+wcwidth==0.2.13
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
 Werkzeug==3.1.1
-xxhash==3.6.0
-yarl==1.22.0
-zstandard==0.25.0
+wrapt==1.17.3
+wsproto==1.2.0
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.23.0
+zope.interface==7.2
+zstandard==0.23.0
